@@ -1,3 +1,4 @@
+* Remove ftools for Rails 1.9 compatibility and remove xml logging, as logging is now included in the connection [cody]
 * Update connection code from ActiveMerchant [cody]
 * Fix space-ridden USPS usernames when validating credentials [james]
 * Remove extra slash from USPS URLs [james]
